--- a/.github/workflows/gitops-deploy.yml
+++ b/.github/workflows/gitops-deploy.yml
@@ -12,46 +12,53 @@ on:
 jobs:
   gitops:
     name: Deploy ArgoCD + Sync All Apps
-    runs-on: self-hosted           # Your self-hosted runner
+    runs-on: self-hosted   # your self-hosted runner
 
     env:
-      KUBECONFIG: /etc/rancher/k3s/k3s.yaml  # Adjust if your kubeconfig is elsewhere
       ARGOCD_NAMESPACE: argocd
       ARGOCD_CHART_VERSION: 7.7.10
       GIT_REPO_URL: git@github.com:cterence/homelab-gitops.git
+      KUBECONFIG: ${{ github.workspace }}/kubeconfig  # this is where we'll write the secret
 
     steps:
-      # 1️⃣ Checkout your repository
+      # 1️⃣ Checkout repository
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # 2️⃣ Load SSH key (for private Git repo access)
+      # 2️⃣ Load SSH key (for private repo access)
       - name: Load SSH Private Key
         uses: webfactory/ssh-agent@v0.9.0
         with:
           ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
-      # 3️⃣ Configure known_hosts for GitHub (avoids host authenticity prompt)
+      # 3️⃣ Configure known_hosts (to trust GitHub SSH fingerprint)
       - name: Configure SSH Known Hosts
         run: |
           mkdir -p ~/.ssh
           echo "${{ secrets.SSH_KNOWN_HOSTS }}" > ~/.ssh/known_hosts
           chmod 600 ~/.ssh/known_hosts
 
-      # 4️⃣ Verify K3S cluster connectivity
-      - name: Verify Kubernetes Connection
+      # 4️⃣ Write kubeconfig from secret
+      - name: Write kubeconfig file
+        run: |
+          echo "${{ secrets.K3S_KUBECONFIG }}" > $KUBECONFIG
+          chmod 600 $KUBECONFIG
+          echo "✅ Wrote kubeconfig to $KUBECONFIG"
+
+      # 5️⃣ Verify Kubernetes connection
+      - name: Verify Kubernetes Cluster
         run: |
           echo "🔍 Checking Kubernetes context..."
           kubectl cluster-info
           kubectl get nodes -o wide
 
-      # 5️⃣ Ensure ArgoCD namespace exists
+      # 6️⃣ Ensure ArgoCD namespace exists
       - name: Create ArgoCD namespace if missing
         run: |
           kubectl get ns $ARGOCD_NAMESPACE || kubectl create ns $ARGOCD_NAMESPACE
 
-      # 6️⃣ Install or upgrade ArgoCD using Helm
-      - name: Install or upgrade ArgoCD
+      # 7️⃣ Install or upgrade ArgoCD
+      - name: Install or upgrade ArgoCD with Helm
         run: |
           helm repo add argo https://argoproj.github.io/argo-helm || true
           helm repo update
@@ -61,35 +68,34 @@ jobs:
             --set server.service.type=LoadBalancer \
             --set configs.params."server.insecure"=true
 
-      # 7️⃣ Wait for ArgoCD server deployment to become available
-      - name: Wait for ArgoCD server to be ready
+      # 8️⃣ Wait until ArgoCD server is ready
+      - name: Wait for ArgoCD server
         run: |
-          echo "⏳ Waiting for ArgoCD server..."
-          kubectl -n $ARGOCD_NAMESPACE wait \
-            --for=condition=available deployment/argocd-server --timeout=600s
+          echo "⏳ Waiting for ArgoCD server deployment..."
+          kubectl -n $ARGOCD_NAMESPACE wait --for=condition=available deployment/argocd-server --timeout=600s
 
-      # 8️⃣ Apply the App-of-Apps manifest
+      # 9️⃣ Apply App-of-Apps manifest
       - name: Apply App-of-Apps manifest
         run: |
-          echo "🚀 Bootstrapping ArgoCD from Git..."
+          echo "🚀 Applying App-of-Apps bootstrap..."
           kubectl apply -f apps/argocd-apps/app-of-apps.yaml
 
-      # 9️⃣ Verify that ArgoCD registered the App-of-Apps
+      # 🔍 10️⃣ Check Application registration
       - name: Verify App-of-Apps registration
         run: |
-          echo "🔍 Checking for ArgoCD Application..."
+          echo "🔍 Checking ArgoCD Application..."
           kubectl -n $ARGOCD_NAMESPACE get app app-of-apps || echo "App-of-Apps not yet created."
 
-      # 🔁 10️⃣ Force refresh and sync all ArgoCD Applications
-      - name: Force sync all ArgoCD Applications
+      # 🔄 11️⃣ Force refresh/sync for all ArgoCD apps
+      - name: Force sync ArgoCD Applications
         run: |
           echo "🔄 Triggering ArgoCD refresh..."
           kubectl -n $ARGOCD_NAMESPACE get applications.argoproj.io -o name | \
           xargs -I{} kubectl -n $ARGOCD_NAMESPACE patch {} --type merge -p '{"metadata":{"annotations":{"argocd.argoproj.io/refresh":"hard"}}}'
-          echo "✅ All ArgoCD apps refreshed and syncing with latest Git state."
+          echo "✅ ArgoCD Applications refreshed and syncing."
 
-      # 🔐 11️⃣ Display ArgoCD admin password
-      - name: Display ArgoCD Admin Password
+      # 🔑 12️⃣ Display ArgoCD Admin password
+      - name: Show ArgoCD Admin Password
         run: |
           echo "🔑 ArgoCD Admin Password:"
           kubectl -n $ARGOCD_NAMESPACE get secret argocd-initial-admin-secret -o jsonpath='{.data.password}' | base64 -d
