--- a/.github/workflows/gitops-deploy.yml
+++ b/.github/workflows/gitops-deploy.yml
@@ -18,20 +18,20 @@ jobs:
       ARGOCD_NAMESPACE: argocd
       ARGOCD_CHART_VERSION: 7.7.10
       GIT_REPO_URL: git@github.com:cterence/homelab-gitops.git
-      KUBECONFIG: ${{ github.workspace }}/kubeconfig  # this is where we'll write the secret
+      KUBECONFIG: ${{ github.workspace }}/kubeconfig
 
     steps:
-      # 1️⃣ Checkout repository
+      # 1️⃣ Checkout the repository
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # 2️⃣ Load SSH key (for private repo access)
+      # 2️⃣ Load SSH key for private repo access
       - name: Load SSH Private Key
         uses: webfactory/ssh-agent@v0.9.0
         with:
           ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
-      # 3️⃣ Configure known_hosts (to trust GitHub SSH fingerprint)
+      # 3️⃣ Configure SSH Known Hosts
       - name: Configure SSH Known Hosts
         run: |
           mkdir -p ~/.ssh
@@ -39,14 +39,14 @@ jobs:
           chmod 600 ~/.ssh/known_hosts
 
       # 4️⃣ Write kubeconfig from secret
-      - name: Write kubeconfig file
+      - name: Configure kubeconfig
         run: |
           echo "${{ secrets.K3S_KUBECONFIG }}" > $KUBECONFIG
           chmod 600 $KUBECONFIG
           echo "✅ Wrote kubeconfig to $KUBECONFIG"
 
-      # 5️⃣ Verify Kubernetes connection
-      - name: Verify Kubernetes Cluster
+      # 5️⃣ Verify K3S cluster connection
+      - name: Verify Kubernetes connection
         run: |
           echo "🔍 Checking Kubernetes context..."
           kubectl cluster-info
@@ -57,8 +57,15 @@ jobs:
         run: |
           kubectl get ns $ARGOCD_NAMESPACE || kubectl create ns $ARGOCD_NAMESPACE
 
-      # 7️⃣ Install or upgrade ArgoCD
-      - name: Install or upgrade ArgoCD with Helm
+      # 7️⃣ Cleanup old CRDs to fix Helm ownership issues (first-time setup only)
+      - name: Cleanup old ArgoCD CRDs
+        run: |
+          echo "🧹 Cleaning up old ArgoCD CRDs (safe if running fresh install)..."
+          kubectl delete crd applications.argoproj.io appprojects.argoproj.io \
+            applicationsets.argoproj.io argocdexports.argoproj.io || true
+
+      # 8️⃣ Install or upgrade ArgoCD
+      - name: Install or upgrade ArgoCD via Helm
         run: |
           helm repo add argo https://argoproj.github.io/argo-helm || true
           helm repo update
@@ -68,34 +75,36 @@ jobs:
             --set server.service.type=LoadBalancer \
             --set configs.params."server.insecure"=true
 
-      # 8️⃣ Wait until ArgoCD server is ready
+      # 9️⃣ Wait until ArgoCD server is ready
       - name: Wait for ArgoCD server
         run: |
           echo "⏳ Waiting for ArgoCD server deployment..."
-          kubectl -n $ARGOCD_NAMESPACE wait --for=condition=available deployment/argocd-server --timeout=600s
+          kubectl -n $ARGOCD_NAMESPACE wait \
+            --for=condition=available deployment/argocd-server --timeout=600s
 
-      # 9️⃣ Apply App-of-Apps manifest
+      # 🔟 Apply App-of-Apps manifest
       - name: Apply App-of-Apps manifest
         run: |
           echo "🚀 Applying App-of-Apps bootstrap..."
           kubectl apply -f apps/argocd-apps/app-of-apps.yaml
 
-      # 🔍 10️⃣ Check Application registration
+      # 11️⃣ Verify ArgoCD Application registration
       - name: Verify App-of-Apps registration
         run: |
           echo "🔍 Checking ArgoCD Application..."
           kubectl -n $ARGOCD_NAMESPACE get app app-of-apps || echo "App-of-Apps not yet created."
 
-      # 🔄 11️⃣ Force refresh/sync for all ArgoCD apps
-      - name: Force sync ArgoCD Applications
+      # 12️⃣ Force refresh/sync for all ArgoCD Applications
+      - name: Force sync all ArgoCD Applications
         run: |
           echo "🔄 Triggering ArgoCD refresh..."
           kubectl -n $ARGOCD_NAMESPACE get applications.argoproj.io -o name | \
-          xargs -I{} kubectl -n $ARGOCD_NAMESPACE patch {} --type merge -p '{"metadata":{"annotations":{"argocd.argoproj.io/refresh":"hard"}}}'
-          echo "✅ ArgoCD Applications refreshed and syncing."
+          xargs -I{} kubectl -n $ARGOCD_NAMESPACE patch {} --type merge \
+            -p '{"metadata":{"annotations":{"argocd.argoproj.io/refresh":"hard"}}}'
+          echo "✅ All ArgoCD Applications refreshed and syncing."
 
-      # 🔑 12️⃣ Display ArgoCD Admin password
-      - name: Show ArgoCD Admin Password
+      # 13️⃣ Show ArgoCD admin password
+      - name: Display ArgoCD Admin Password
         run: |
           echo "🔑 ArgoCD Admin Password:"
           kubectl -n $ARGOCD_NAMESPACE get secret argocd-initial-admin-secret -o jsonpath='{.data.password}' | base64 -d
