--- a/.github/workflows/gitops-deploy.yml
+++ b/.github/workflows/gitops-deploy.yml
@@ -1,118 +1,51 @@
-name: Homelab GitOps Deployment
+name: 🚀 Bootstrap ArgoCD GitOps
 
 on:
-  push:
-    branches: [ main ]
-    paths:
-      - 'apps/argocd-apps/**'
-      - 'apps/k8s-apps/**'
-      - '.github/workflows/gitops-deploy.yml'
+  # Manual trigger button in GitHub Actions UI
   workflow_dispatch:
 
+  # Automatic trigger when ArgoCD configuration changes
+  push:
+    branches: [main]
+    paths:
+      - 'argocd-apps/**'
+      - '.github/workflows/bootstrap.yml'
+
 jobs:
-  gitops:
-    name: Deploy ArgoCD + App-of-Apps + ApplicationSet
+  bootstrap:
     runs-on: self-hosted
 
-    env:
-      ARGOCD_NAMESPACE: argocd
-      ARGOCD_CHART_VERSION: 7.7.10
-      GIT_REPO_URL: git@github.com:cterence/homelab-gitops.git
-      KUBECONFIG: ${{ github.workspace }}/kubeconfig
-
     steps:
-      # 1️⃣ Checkout the repo
-      - name: Checkout repository
+      - name: 🧩 Checkout
         uses: actions/checkout@v4
 
-      # 2️⃣ Load SSH Private Key (for repo access)
-      - name: Load SSH Private Key
-        uses: webfactory/ssh-agent@v0.9.0
-        with:
-          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
-
-      # 3️⃣ Configure SSH Known Hosts (to trust GitHub)
-      - name: Configure SSH Known Hosts
+      - name: ⚙️ Configure Kubeconfig
         run: |
-          mkdir -p ~/.ssh
-          echo "${{ secrets.SSH_KNOWN_HOSTS }}" > ~/.ssh/known_hosts
-          chmod 600 ~/.ssh/known_hosts
+          mkdir -p ~/.kube
+          echo "${{ secrets.K3S_KUBECONFIG }}" > ~/.kube/config
+          chmod 600 ~/.kube/config
 
-      # 4️⃣ Write kubeconfig from GitHub secret
-      - name: Configure kubeconfig
+      - name: 🧠 Install ArgoCD
         run: |
-          echo "${{ secrets.K3S_KUBECONFIG }}" > $KUBECONFIG
-          chmod 600 $KUBECONFIG
-          echo "✅ Wrote kubeconfig to $KUBECONFIG"
-
-      # 5️⃣ Verify cluster access
-      - name: Verify Kubernetes connection
-        run: |
-          echo "🔍 Checking K3S cluster connectivity..."
-          kubectl cluster-info
-          kubectl get nodes -o wide
-
-      # 6️⃣ Ensure ArgoCD namespace exists
-      - name: Ensure ArgoCD namespace exists
-        run: |
-          kubectl get ns $ARGOCD_NAMESPACE || kubectl create ns $ARGOCD_NAMESPACE
-
-      # 🧹 7️⃣ Cleanup old ArgoCD resources (prevents Helm ownership errors)
-      - name: Cleanup previous ArgoCD installation
-        run: |
-          echo "🧹 Cleaning up any old ArgoCD resources..."
-          kubectl delete namespace argocd --ignore-not-found=true
-          kubectl delete crd applications.argoproj.io appprojects.argoproj.io \
-            applicationsets.argoproj.io argocdexports.argoproj.io --ignore-not-found=true
-          kubectl delete clusterrole argocd-application-controller argocd-server argocd-dex-server --ignore-not-found=true
-          kubectl delete clusterrolebinding argocd-application-controller argocd-server argocd-dex-server --ignore-not-found=true
-          echo "✅ Cleanup completed."
-          kubectl create ns $ARGOCD_NAMESPACE || true
-
-      # 8️⃣ Install or upgrade ArgoCD via Helm
-      - name: Install or upgrade ArgoCD
-        run: |
-          helm repo add argo https://argoproj.github.io/argo-helm || true
+          helm repo add argo https://argoproj.github.io/argo-helm
           helm repo update
           helm upgrade --install argocd argo/argo-cd \
-            --namespace $ARGOCD_NAMESPACE \
-            --version $ARGOCD_CHART_VERSION \
-            --set installCRDs=true \
-            --set server.service.type=LoadBalancer \
-            --set configs.params."server.insecure"=true
+            --namespace argocd --create-namespace \
+            --set server.service.type=LoadBalancer
 
-      # 9️⃣ Wait for ArgoCD server
-      - name: Wait for ArgoCD server to be ready
+      - name: 🔐 Bootstrap GitHub Secret Store
+        env:
+          GITHUB_PAT: ${{ secrets.GITHUB_PAT }}
         run: |
-          echo "⏳ Waiting for ArgoCD server..."
-          kubectl -n $ARGOCD_NAMESPACE wait \
-            --for=condition=available deployment/argocd-server --timeout=600s
+          kubectl create ns external-secrets --dry-run=client -o yaml | kubectl apply -f -
+          kubectl -n external-secrets create secret generic github-secret-store \
+            --from-literal=token="$GITHUB_PAT" \
+            --dry-run=client -o yaml | kubectl apply -f -
 
-      # 🔟 Apply both ArgoCD app manifests (App-of-Apps + ApplicationSet)
-      - name: Apply App-of-Apps and ApplicationSet
+      - name: 🚀 Apply Root Application (Apps-of-Apps)
         run: |
-          echo "🚀 Applying ArgoCD bootstrap manifests..."
-          kubectl apply -f apps/argocd-apps/app-of-apps.yaml
-          kubectl apply -f apps/argocd-apps/applicationset.yaml
-          echo "✅ Both app-of-apps.yaml and applicationset.yaml applied."
+          kubectl apply -f argocd-apps/root-app.yaml
 
-      # 11️⃣ Verify that ArgoCD registered the Application
-      - name: Verify App-of-Apps registration
+      - name: ✅ Verify ArgoCD Root App
         run: |
-          echo "🔍 Checking ArgoCD Application..."
-          kubectl -n $ARGOCD_NAMESPACE get app app-of-apps || echo "App-of-Apps not yet created."
-
-      # 12️⃣ Force ArgoCD to refresh/sync
-      - name: Force sync all ArgoCD Applications
-        run: |
-          echo "🔄 Forcing ArgoCD refresh..."
-          kubectl -n $ARGOCD_NAMESPACE get applications.argoproj.io -o name | \
-          xargs -I{} kubectl -n $ARGOCD_NAMESPACE patch {} --type merge \
-            -p '{"metadata":{"annotations":{"argocd.argoproj.io/refresh":"hard"}}}'
-          echo "✅ ArgoCD Applications refreshed and syncing."
-
-      # 13️⃣ Show ArgoCD admin password
-      - name: Display ArgoCD Admin Password
-        run: |
-          echo "🔑 ArgoCD Admin Password:"
-          kubectl -n $ARGOCD_NAMESPACE get secret argocd-initial-admin-secret -o jsonpath='{.data.password}' | base64 -d
+          kubectl get applications.argoproj.io -n argocd || true
