--- a/k3s-apps/secrets/external-secrets-operator.yaml
+++ b/k3s-apps/secrets/external-secrets-operator.yaml
@@ -1,21 +1,20 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: root-app
+  name: external-secrets-operator
   namespace: argocd
 spec:
   project: default
   source:
-    repoURL: https://github.com/ShahzaibRao/homeops.git
-    targetRevision: main
-    path: k3s-apps
+    repoURL: https://charts.external-secrets.io
+    chart: external-secrets
+    targetRevision: 0.9.17
+    helm:
+      releaseName: external-secrets
   destination:
+    namespace: external-secrets
     server: https://kubernetes.default.svc
-    namespace: argocd
   syncPolicy:
     automated:
       prune: true
       selfHeal: true
-    syncOptions:
-      - CreateNamespace=true
-      - ApplyOutOfSyncOnly=true
