--- a/k3s-apps/cloudflared/app.yaml
+++ b/k3s-apps/cloudflared/app.yaml
@@ -8,7 +8,7 @@ spec:
   source:
     repoURL: https://github.com/ShahzaibRao/homeops.git
     targetRevision: main
-    path: k3s-apps/cloudflared/manifests
+    path: k3s-apps/cloudflared/
   destination:
     server: https://kubernetes.default.svc
     namespace: kube-system
