--- a/k3s-apps/externaldns/app.yaml
+++ b/k3s-apps/externaldns/app.yaml
@@ -8,7 +8,7 @@ spec:
   source:
     repoURL: https://github.com/ShahzaibRao/homeops.git
     targetRevision: main
-    path: k3s-apps/externaldns/manifests
+    path: k3s-apps/externaldns/
   destination:
     server: https://kubernetes.default.svc
     namespace: kube-system
