--- a/k3s-apps/nginx/app.yaml
+++ b/k3s-apps/nginx/app.yaml
@@ -8,7 +8,7 @@ spec:
   source:
     repoURL: https://github.com/ShahzaibRao/homeops.git
     targetRevision: main
-    path: k3s-apps/nginx/manifests
+    path: k3s-apps/nginx/
   destination:
     server: https://kubernetes.default.svc
     namespace: default
