--- a/k3s-apps/cloudflared/deployment.yaml
+++ b/k3s-apps/cloudflared/deployment.yaml
@@ -18,15 +18,13 @@ spec:
           image: cloudflare/cloudflared:latest
           args:
             - tunnel
+            - --no-autoupdate
             - run
+            - --token
+            - $(TUNNEL_TOKEN)
           env:
-            - name: TUNNEL_CREDENTIAL_FILE
-              value: /etc/cloudflared/creds/tunnel.json
-          volumeMounts:
-            - name: creds
-              mountPath: /etc/cloudflared/creds
-              readOnly: true
-      volumes:
-        - name: creds
-          secret:
-            secretName: cloudflare-api-token-secret
+            - name: TUNNEL_TOKEN
+              valueFrom:
+                secretKeyRef:
+                  name: cloudflared-creds
+                  key: tunnel-token
