--- a/argocd-apps/applicationset.yaml
+++ b/argocd-apps/applicationset.yaml
@@ -12,6 +12,7 @@ spec:
           - name: cloudflared
           - name: external-dns
           - name: nginx
+          - name: vault 
 
   template:
     metadata:
