--- a/k3s-apps/vault/kustomization.yaml
+++ b/k3s-apps/vault/kustomization.yaml
@@ -2,17 +2,12 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - namespace.yaml
-  - vault-serviceaccount.yaml
-  - vault-configmap.yaml
-  - vault-statefulset.yaml
-  - vault-service.yaml
-  - vault-init-job.yaml
-  - vault-unseal-job.yaml
+  - Chart.yaml
 
-images:
-  - name: hashicorp/vault
-    newName: hashicorp/vault
-    newTag: 1.15.0
-
-namespace: vault
+helmCharts:
+  - name: vault
+    repo: https://helm.releases.hashicorp.com
+    version: 0.25.0
+    valuesFile: values.yaml
+    releaseName: vault
+    namespace: vault
