--- a/k3s-apps/vault/vault-serviceaccount.yaml
+++ b/k3s-apps/vault/vault-serviceaccount.yaml
@@ -4,8 +4,7 @@ metadata:
   name: vault
   namespace: vault
   labels:
-    app.kubernetes.io/name: vault
-    app.kubernetes.io/instance: vault
+    app: vault
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
@@ -13,18 +12,11 @@ metadata:
   name: vault
   namespace: vault
   labels:
-    app.kubernetes.io/name: vault
-    app.kubernetes.io/instance: vault
+    app: vault
 rules:
   - apiGroups: [""]
-    resources: ["pods", "services", "endpoints", "secrets"]
-    verbs: ["get", "list", "watch", "create", "update", "patch", "delete"]
-  - apiGroups: ["apps"]
-    resources: ["statefulsets", "deployments"]
-    verbs: ["get", "list", "watch", "create", "update", "patch", "delete"]
-  - apiGroups: ["extensions"]
-    resources: ["deployments"]
-    verbs: ["get", "list", "watch", "create", "update", "patch", "delete"]
+    resources: ["pods", "services", "endpoints"]
+    verbs: ["get", "list", "watch"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
@@ -32,8 +24,7 @@ metadata:
   name: vault
   namespace: vault
   labels:
-    app.kubernetes.io/name: vault
-    app.kubernetes.io/instance: vault
+    app: vault
 subjects:
   - kind: ServiceAccount
     name: vault
